------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------
April 30 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added invisible stalker
	* Bone files work in Linux
	
April 28 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Slight improvements to makefiles
	
April 28 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Golems can now read
	* Death message now shows if the player is polymorphed
	* Flying items are no longer slowed by code if they can't be seen, which
	  makes AI battles faster

April 28 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Ghosts with >= 100 HPs can no longer be polymorphed
	* Carrots' weights and NP values are now more realistic
	* Carrot flesh plate mails are no longer allowed since eating them gave 10
	  perception
	* Metal bodyparts are now resurrected correctly
	* Potions shattering inside damaged chests now give a message
	* Lanterns' weight decreased to 1 kg
	* Stethoscope is again useless
	* The player can no longer talk if he is a golem

April 28 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Vomiting on the altar of Valpurus in Attnam is now punished with death

April 28 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Ghosts now ignore sound damage
	* Cloning a monster along with a stack now reduces the amount of copied items
	  by one
	* Corrected two small bugs in the lookmode code

April 28 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* BusyAnimations are now cached

April 28 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Bonefiles are now working
	* Mellis now changes 10 items instead of 5
	* Replaced many Id-ending terms with *ID
	* Corrected yet another many bugs in the bear trap code
	* Panicked monsters no longer start eating or equipping things